Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ html, body, input, input::placeholder {
 
 .section-header {
     font-size: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .usp .section-header {
